# Quorking

./: CMakeLists.txt  README.md
include/: GAME.HPP  NODE.HPP  SCENE.HPP  TRANSFORM.HPP
include/engine/: CAMERA.HPP  MESH.HPP  MODEL.HPP  NODE.HPP  SCENE.HPP  SHADER.HPP  TEXTURE.HPP  UTIL.HPP
res/: barrel_5thgen.mtl  cube.tzt  simple.frag  simple.vert
src/: GAME.CPP  MAIN.CPP  SCENE.CPP  TRANSFORM.CPP
src/engine/: CAMERA.CPP  MESH.CPP  MODEL.CPP  NODE.CPP  SCENE.CPP  SHADER.CPP  TEXTURE.CPP  TRANSFORM.CPP  UTIL.CPP
